--- a/spring-boot-config/src/main/resources/application-dev.properties
+++ b/spring-boot-config/src/main/resources/application-dev.properties
@@ -1,25 +1,23 @@
-# 配置Tomcat
-server.port=8081
-server.servlet.context-path=/hello
-server.servlet.session.timeout=30m
-server.error.path=/error
-server.tomcat.uri-encoding=gbk
-server.tomcat.max-threads=200
-server.tomcat.basedir=D:/tools/tomcat/temp
-
+server.port=8443
 # 配置https
 server.ssl.key-alias=selfsigned_localhost_sslserver
 server.ssl.key-store-password=changeit
 server.ssl.key-store=classpath:ssl-server.jks
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-type=JKS
+## 配置Tomcat
+server.servlet.context-path=/dev
+server.servlet.session.timeout=30m
+server.error.path=/error
+server.tomcat.uri-encoding=utf-8
+server.tomcat.max-threads=200
+server.tomcat.basedir=D:/tools/tomcat/temp
 
-
-# 配置对象属性
-music.name=开到荼蘼
-music.artist=王菲
+# 配置自定义属性
+music.name=music001
+music.artist=aaa
 music.playCount=30000
-music.description=${music.name}的演唱者是${music.artist}
+music.description=${music.name} by ${music.artist}
 music.comments[0]=good
 music.comments[1]=nice
 music.comments[2]=excellent
