--- a/spring-boot-config/src/main/resources/application-test.properties
+++ b/spring-boot-config/src/main/resources/application-test.properties
@@ -1,26 +1,25 @@
-server.port=8081
-server.servlet.context-path=/hello
-server.servlet.session.timeout=30m
-server.error.path=/error
-server.tomcat.uri-encoding=utf-8
-server.tomcat.max-threads=200
-server.tomcat.basedir=D:/tools/tomcat/temp
-
-# 配置https
+server.port=8443
+# HTTPS配置
 server.ssl.key-alias=selfsigned_localhost_sslserver
 server.ssl.key-store-password=changeit
 server.ssl.key-store=classpath:ssl-server.jks
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-type=JKS
-
-# 配置对象属性
-music.name=开到荼蘼
-music.artist=王菲
-music.playCount=30000
-music.description=${music.name}的演唱者是${music.artist}
+# Tomcat配置
+server.servlet.context-path=/test
+server.servlet.session.timeout=30m
+server.error.path=/error
+server.tomcat.uri-encoding=utf-8
+server.tomcat.max-threads=200
+server.tomcat.basedir=D:/tools/tomcat/temp
+# 自定义属性
+music.name=music003
+music.artist=ccc
+music.playCount=10000
+music.description=${music.name} by ${music.artist}
 music.comments[0]=good
 music.comments[1]=nice
 music.comments[2]=excellent
-music.rank.january=1
-music.rank.february=1
-music.rank.march=2
+music.rank.january=3
+music.rank.february=3
+music.rank.march=4
