spring-boot-jpa模块 1.one-to-one 2.one-to-many 3.many-to-many

--- a/spring-boot-jpa/src/main/resources/application-prod.yml
+++ b/spring-boot-jpa/src/main/resources/application-prod.yml
@@ -11,13 +11,13 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
+    url: jdbc:mysql://127.0.0.1:3306/test1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      jdbc-url: jdbc:mysql://127.0.0.1:3306/test1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-      username: root
-      password: root
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      maximumPoolSize: 10
-      minimumIdle: 10
-      idleTimeout: 600000
-      connectionTimeout: 30000
-      max-lifetime: 180000
+      maximumPoolSize: 15
+      max-lifetime: 1800000
+      minimum-idle: 2
+      idle-timeout: 60000
+      connection-timeout: 30000
