--- a/spring-boot-jpa/src/main/resources/application.properties
+++ b/spring-boot-jpa/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#spring.datasource.primary.jdbc-url=jdbc:mysql://127.0.0.1:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.primary.jdbc-url=jdbc:mysql://127.0.0.1:3306/test1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 #spring.datasource.primary.username=root
 #spring.datasource.primary.password=root
 #spring.datasource.primary.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.secondary.jdbc-url=jdbc:mysql://127.0.0.1:3306/test1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.secondary.jdbc-url=jdbc:mysql://127.0.0.1:3306/test2?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 #spring.datasource.secondary.username=root
 #spring.datasource.secondary.password=root
 #spring.datasource.secondary.driver-class-name=com.mysql.cj.jdbc.Driver
