--- a/spring-boot-task-schedule/src/main/resources/application.yml
+++ b/spring-boot-task-schedule/src/main/resources/application.yml
@@ -1,24 +1,83 @@
+#server:
+#  port: 8080
+#spring:
+#  application:
+#    name:  spring-boot-task-schedule
+
+#
+#  datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#    username: root
+#    password: root
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
+#    hikari:
+#      maximumPoolSize: 10
+#      minimumIdle: 10
+#      idleTimeout: 600000
+#      connectionTimeout: 30000
+#      max-lifetime: 180000
+#  jpa:
+#    database: mysql
+#    show-sql: false
+#    generate-ddl: true
+#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#    hibernate:
+#      ddl-auto: update
+
+#  quartz:
+#    properties:
+#      org:
+#        quartz:
+#          scheduler:
+#            instancename: MyScheduler
+#            instanceId: AUTO
+#          jobStore:
+#            class: org.quartz.impl.jdbcjobstore.JobStoreTX
+#            driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#            tablePrefix: qrtz_
+#            useProperties: false
+#            clusterCheckinInterval: 10000
+##            dataSource: myDs
+#          threadPool:
+#            class: org.quartz.simpl.SimpleThreadPool
+#            threadCount: 10
+#            threadPriority: 5
+#            threadsInheritContextClassLoaderOfInitializingThread: true
+#          dataSource:
+#            driver: com.mysql.cj.jdbc.Driver
+#            URL: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#            user: root
+#            password: root
+#mybatis:
+#  mapper-locations: classpath:/mapper/*.xml
+#  type-aliases-package: com.soft1851.springboot.schedule.model
+#    job-store-type: jdbc
+
+quartz:
+  enabled: true
 server:
   port: 8080
 spring:
   application:
-    name:  spring-boot-task-schedule
+    name: Spring-Quartz-Scheduler
   mail:
     host: smtp.qq.com
     port: 25
     username: 16422802@qq.com
-    password: ######
+    password: uqvibaljlxdxcahc
     default-encoding: UTF-8
-
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    database: mysql
-    show-sql: false
-    generate-ddl: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    hibernate:
-      ddl-auto: update
+    tomcat:
+      initialSize: 20
+      maxActive: 100
+      maxIdle: 100
+      minIdle: 20
+      maxWait: 10000
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
