spring-boot-task-schedule :Quartz整合数据库

--- a/spring-boot-task-schedule/src/main/resources/quartz.properties
+++ b/spring-boot-task-schedule/src/main/resources/quartz.properties
@@ -1,5 +1,5 @@
 ## 固定前缀org.quartz
-## 主要分为scheduler（调度器）、threadPool（线程池）、jobStore（作业存储）、plugin（插件）等几个部分的配置
+## 主要分为scheduler（调度器）、threadPool（线程池）、jobStore、plugin（插件）等几个部分的配置
 #org.quartz.scheduler.instanceName = DefaultQuartzScheduler
 #org.quartz.scheduler.rmi.export = false
 #org.quartz.scheduler.rmi.proxy = false
@@ -37,7 +37,7 @@
 #
 #org.quartz.dataSource.qzDS.maxConnections = 10
 
-
+####################################################
 #ID设置为自动获取 每一个必须不同 （所有调度器实例中是唯一的）
 org.quartz.scheduler.instanceId=AUTO
 #指定调度程序的主线程是否应该是守护线程
